# dockerize_flask_app

./: Dockerfile  README.md  app.py  deployment.yaml  docker-compose.yml  dockerfile  pyproject.toml  pyproject.txt  requirements.txt  service.yaml
helm/flask-app-chart/: values.yaml
helm/flask-app-chart/templates/: deployment.yaml
kind/: deployment.yaml  service.yaml
kind-manifests/: deployment.yaml  service.yaml
olds/: pyproject_old_toml
