[project]
name = "flask_app"
version = "1.1.12"
description = "A short description of your project"

[dependencies]
flask = "^3.0.2"
click = "^8.1.7"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.3"
MarkupSafe = "^2.1.5"
Werkzeug = "^3.0.1"
blinker = "^1.7.0"
colorama = "^0.4.6"

[tool.poetry]
virtualenvs.create = true