[tool.poetry]
name = "my_project_poetry"
version = "0.1.0"
description = "Transition from requirements.txt to poetry"
authors = ["knutov-nikolai <knutov_nikolai@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
